# Scha_imu_board

./: LICENSE  README.md
board_hardware/IMU_board_ver2.0/: IMU-USB_ver2_Bill_of_Materials.xlsx  IMU_USB_ver2.kicad_pcb  IMU_USB_ver2.kicad_pcb-bak  IMU_USB_ver2.net  IMU_USB_ver2.pro  IMU_USB_ver2.sch  fp-info-cache
board_hardware/IMU_board_ver2.0/KiCadlib/BLM/: BLM15HB121SN1D.lib
board_hardware/IMU_board_ver2.0/KiCadlib/BLM/BLM15HB121SN1D.pretty/: BLM15HB121SN1D.kicad_mod
board_hardware/IMU_board_ver2.0/KiCadlib/Tennsy/teensy.pretty/: Teensy40_2.kicad_mod  Teensy40_SMT2.kicad_mod
board_hardware/IMU_board_ver2.0/KiCadlib/murataIMU/: SCHA6xx.lib
board_hardware/IMU_board_ver2.0/KiCadlib/murataIMU/murata.pretty/: SCHA6xx.kicad_mod
board_hardware/IMU_board_ver2.0/order_data/: IMU_USB_ver2-B_Cu.gbr  IMU_USB_ver2-B_Mask.gbr  IMU_USB_ver2-B_Paste.gbr  IMU_USB_ver2-B_SilkS.gbr  IMU_USB_ver2-Edge_Cuts.gbr  IMU_USB_ver2-F_Cu.gbr  IMU_USB_ver2-F_Mask.gbr  IMU_USB_ver2-F_Paste.gbr  IMU_USB_ver2-F_SilkS.gbr  IMU_USB_ver2-NPTH-drl_map.gbr  IMU_USB_ver2-NPTH.drl  IMU_USB_ver2-PTH-drl_map.gbr  IMU_USB_ver2-PTH.drl  IMU_USB_ver2-job.gbrjob
board_software/libraries/SCHA/: SCHA.cpp  SCHA.h
board_software/scha_board/: scha_board.ino
ros_package/scha_imu_driver/: CMakeLists.txt  package.xml  scha_imu_node.cpp
ros_package/scha_imu_driver/config/: scha634-xxx.yaml  scha63T-xxx.yaml
ros_package/scha_imu_driver/launch/: scha_imu_634.launch  scha_imu_63T.launch  scha_imu_two_board.launch
ros_package/scha_imu_driver/src/: scha_imu_node.cpp
